[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnspooh"
description = "A Lightweight DNS MitM Proxy"
authors = [
  { name="tabris17", email="tabris17.cn@gmail.com" },
]
classifiers = [
  "Topic :: Internet :: Name Service (DNS)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
license = {text = "MIT License"}
requires-python = ">=3.10"
dynamic = ["version", "readme", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/tabris17/dnspooh"
"Bug Tracker" = "https://github.com/tabris17/dnspooh/issues"

[project.scripts]
dnspooh = "dnspooh.cli:main"

[tool.setuptools.dynamic]
version = {attr = "dnspooh.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dnspooh = ["geoip"]
